2011-11-17  William A. Perkins  <william.perkins@pnnl.gov>

	* gage_output_module.f90 (gage_file_setup_text): fix typo not
	liked by some compiler

2011-05-15  Perkins  <D3G096@ironhorse.pnl.gov>

	* util/cart_grid/Makefile.am: use $(OBJEXT) instead of .o so
	things work on Windoze

	* mass2.f90 (mass2): don't use the fptrap module anymore

	* Makefile.am : use $(OBJEXT) instead of .o so things work on
	Windoze

	* configure.in: use $(OBJEXT) instead of .o so things work on
	Windoze

2011-05-12  William A. Perkins  <william.perkins@pnl.gov>

	* plot_cgns.f90 (plot_cgns_setup): keep track of the blocks that
	have BCs and connections
	(plot_cgns_link_coord): don't link grid metrics; link BCs and
	connections only if needed
	(plot_cgns_write_bc): put donor points in output because you get
	stupid CGNS errors otherwise

2011-05-04  William A. Perkins  <william.perkins@pnl.gov>

	* plot_cgns.f90 (plot_cgns_file_setup): only write BCs when
	coordinates are written 
	(plot_cgns_link_coord): link to BCs and connections too
	(plot_cgns_write_bc): write connections too

	* Makefile.am (plot_cgns.o): depends on block_bc_module.o

	* plot_cgns.f90 (plot_cgns_write_bc): initial routine to write
	boundary conditions (no connections)
	(plot_cgns_file_setup): write boundary conditions in grid file

2011-04-25  William A. Perkins  <william.perkins@pnl.gov>

	* global_module_023.f90 (velocity_shift): fixed indexing problem
	in flux calculations

2011-03-20  William A. Perkins  <william.perkins@pnl.gov>

	* plot_cgns.f90 (plot_cgns_file_setup): make output 3D; make sure
	of file physical dimension

	* test/temperature/pond/mass2_v027.cfg: make gage output hourly

	* test/flow/normal-2blk/mass2_v027.cfg: update eddy viscosity
	input 

2010-12-17  William A. Perkins  <william.perkins@pnl.gov>

	* configure.in: need to call AC_PROG_FC() before AC_PROG_F90()

	* table_bc_module.f90 (table_boundary_conditions): increase
	maximum number of table columns
