@@ -1,1 +1,2 @@
-1 TEMP      temperature     "Water Temperature"     Celcius AIREXCH /
+1 TEMP      temperature     "Water Temperature"     Celcius 
+    AIREXCH SPECIFIC_HEAT "specific_heat.dat" /
