@@ -1,0 +1,6 @@
+# A constant specific heat
+01-01-1900 00:00:00 2093.0 /
+06-01-1992 00:00:00 2093.0 /
+07-01-1992 00:00:01 4186.0 /
+01-01-3100 00:00:00 4186.0 /
+
