@@ -1,3 +1,15 @@
+2013-02-25  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* test/temperature/pond: specify specific heat as a time series
+
+	* scalars_source.f90 (scalar_source_timestep): update specific
+	heat time series
+
+	* temperature_source.f90 (temperature_parse_options): allow the
+	specific heat (domain-wide) to be specified as a time series
+
+	* constants.f90 (constants): remove temperature related constants 
+
 2011-11-17  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* gage_output_module.f90 (gage_file_setup_text): fix typo not
